--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,20 @@
-//
+@import url("https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
+
+:root {
+    --primary-font: "Luckiest Guy", cursive;
+    --secondary-font: "Roboto", san-serif;
+}
+
+.header-title {
+    font-family: var(--primary-font);
+    background: none;
+}
+
+.hero-bg {
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSUdGQ4-Q3WN9sENB8l5S3MsmIjQcdLi1pvJ_DQSvRxCod7ByM3");
+    background-size: contain;
+    height: auto;
+}
+
+
