--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,20 +1,36 @@
+@import "./card.scss";
+@import "./module";
+
 @import url("https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
+
+
 
 :root {
     --primary-font: "Luckiest Guy", cursive;
     --secondary-font: "Roboto", san-serif;
 }
 
+// Header title
 .header-title {
     font-family: var(--primary-font);
     background: none;
 }
 
+// Hero background
 .hero-bg {
     background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSUdGQ4-Q3WN9sENB8l5S3MsmIjQcdLi1pvJ_DQSvRxCod7ByM3");
     background-size: contain;
     height: auto;
 }
 
+.post-content {
+    padding: 1em 2.2rem 1em 2.2rem !important;
 
+    // Latest text
+    .latest {
+        border-top: 2px solid $yellow;
+        border-bottom: 2px solid $yellow;
+        width: 250px;
+    }
+}
